samples/_failures_safe/1761340681_6357a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d58753d.c: In function ‘print_token’:
./samples/SAFE/__tmp_0d58753d.c:167:20: error: missing terminating " character
  167 |             printf("STRING: %s at line
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0d58753d.c:167:13: error: expected expression at end of input
  167 |             printf("STRING: %s at line
      |             ^~~~~~
./samples/SAFE/__tmp_0d58753d.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d58753d.c:167:13: error: expected declaration or statement at end of input
